--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -6,4 +6,5 @@
     <string name="home">home</string>
     <string name="category">categories</string>
     <string name="my_digikala">my Digikala</string>
+    <string name="search_in">search in</string>
 </resources>
