--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="home">خانه</string>
     <string name="category">دسته‌بندی‌ها</string>
     <string name="my_digikala">دیجی‌کالای من</string>
+    <string name="search_in">جستجو در</string>
 
 </resources>
