added price unit in the amazing item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="category">دسته‌بندی‌ها</string>
     <string name="my_digikala">دیجی‌کالای من</string>
     <string name="search_in">جستجو در</string>
+    <string name="price_unit" translatable="false">تومان</string>
 
 </resources>
