--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -7,4 +7,12 @@
     <string name="category">categories</string>
     <string name="my_digikala">my Digikala</string>
     <string name="search_in">search in</string>
+
+    <!-- these strings for test -->
+    <string name="profile_screen">Profile screen</string>
+    <string name="change_language">Change language</string>
+    <string name="change_language_choice">Choose a language please.</string>
+    <string name="english">English</string>
+    <string name="persian">Persian</string>
+
 </resources>
