add best seller section. Closes #32

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="my_digikala">دیجی‌کالای من</string>
     <string name="search_in">جستجو در</string>
     <string name="price_unit" translatable="false"> تومان </string>
+    <string name="best_selling_products">پرفروش ترین کالاها</string>
 
     <!-- these strings for test -->
     <string name="profile_screen">صفحه پروفایل</string>
@@ -14,8 +15,6 @@
     <string name="change_language_choice">لطفا زبان مورد نظر را انتخاب کنید</string>
     <string name="english">انگلیسی</string>
     <string name="persian">فارسی</string>
-
-
 
 
 </resources>
