--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -7,6 +7,7 @@
     <string name="category">categories</string>
     <string name="my_digikala">my Digikala</string>
     <string name="search_in">search in</string>
+    <string name="best_selling_products">best selling products</string>
 
     <!-- these strings for test -->
     <string name="profile_screen">Profile screen</string>
