--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,25 @@
     <string name="best_selling_products">پرفروش‌ترین کالاها</string>
     <string name="most_visited_products">پربازدیدترین محصولات</string>
 
-    <!-- these strings for test -->
     <string name="profile_screen">صفحه پروفایل</string>
     <string name="change_language">تغییر زبان</string>
     <string name="change_language_choice">لطفا زبان مورد نظر را انتخاب کنید</string>
     <string name="english">انگلیسی</string>
     <string name="persian">فارسی</string>
+
+    <string name="commodity">کالا</string>
+    <string name="see_all">مشاهده همه</string>
+    <string name="industrial_tools_and_equipment">ابزار و تجهیزات صنعتی</string>
+    <string name="digital_goods">کالای دیجیتال</string>
+    <string name="mobile">موبایل</string>
+    <string name="supermarket_product">کالای سوپرمارکتی</string>
+    <string name="fashion_and_clothing">مد و پوشاک</string>
+    <string name="native_and_local_products">محصولات بومی و محلی</string>
+    <string name="toys_children_and_babies">اسباب بازی، کودک و نوزاد</string>
+    <string name="beauty_and_health">زیبایی و سلامت</string>
+    <string name="home_and_kitchen">خانه و آشپزخانه</string>
+    <string name="books_and_stationery">کتاب و لوازم تحریر</string>
+    <string name="sports_and_travel">ورزش و سفر</string>
 
 
 </resources>
