--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="price_unit" translatable="false"> تومان </string>
     <string name="best_selling_products">پرفروش‌ترین کالاها</string>
     <string name="most_visited_products">پربازدیدترین محصولات</string>
+    <string name="most_discounted_products">منتخب محصولات حراج و تخفیف</string>
 
     <string name="profile_screen">صفحه پروفایل</string>
     <string name="change_language">تغییر زبان</string>
