--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="books_and_stationery">کتاب و لوازم تحریر</string>
     <string name="sports_and_travel">ورزش و سفر</string>
 
+    <string name="category_title">خرید بر اساس دسته بندی</string>
 
     <string name="loginTxt">برای ورود یا ثبت نام در دیجی کالا شماره موبایل یا پست الکترونیک خود را وارد نمایید</string>
     <string name="Terms_and_rules">با ورود و یا ثبت نام در دیجی کالا شما شرایط و قوانین استفاده از سرویس های سایت دیجی کالا و قوانین حریم خصوصی آن را می پذیرید.</string>
