add login ui and state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,11 +42,14 @@
     <string name="more">بیشتر</string>
 
     <string name="loginTxt">برای ورود یا ثبت نام در دیجی کالا شماره موبایل یا پست الکترونیک خود را وارد نمایید</string>
+    <string name="set_password_text">لطفا یک رمز عبور برای خود تعیین کنید و یا اگر قبلا ثبت‌نام کرده‌اید، رمز عبور خود را وارد کنید.</string>
     <string name="terms_and_rules_full">با ورود و یا ثبت نام در دیجی کالا شما شرایط و قوانین استفاده از سرویس های سایت دیجی کالا و قوانین حریم خصوصی آن را می پذیرید.</string>
     <string name="terms_and_rules">شرایط و قوانین</string>
     <string name="privacy_and_rules">قوانین حریم خصوصی</string>
     <string name="digikala_entry">ورود به دیجی کالا</string>
+    <string name="digikala_login">بزن بریم!</string>
     <string name="phone_and_email">شماره موبایل یا پست الکترونیک</string>
+    <string name="set_password">رمز عبور خود را وارد کنید</string>
 
     
 
