--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="set_password">رمز عبور خود را وارد کنید</string>
     <string name="login_error">فرمت شماره تلفن یا ایمیل صحیح نیست.</string>
     <string name="password_error">اطلاعات وارد شده صحیح نیست</string>
-
+    <string name="favoriteProduct">محبوب ترین محصولات</string>
     
 
 
