--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,18 @@
     <string name="login_error">فرمت شماره تلفن یا ایمیل صحیح نیست.</string>
     <string name="password_error">اطلاعات وارد شده صحیح نیست</string>
     <string name="favoriteProduct">محبوب ترین محصولات</string>
-    
+
+<!--basket desc-->
+<!--    stringResource(R.string.search_in)-->
+    <string name="cart">سبد خرید</string>
+    <string name="next_cart_list">لیست خرید بعدی</string>
+    <string name="purchase_process">ادامه فرآیند خرید</string>
+    <string name="total_shopping_cart">جمع سبد خرید</string>
+    <string name="cart_is_empty">سبد خرید شما خالی است!</string>
+    <string name="next_cart_list_is_empty">لیست خرید بعدی شما خالی است!</string>
+    <string name="next_cart_list_is_empty_msg">شما می‌توانید محصولاتی که به سبد خرید خود افزوده‌اید و فعلا قصد خرید آن‌ها را ندارید، در لیست خرید بعدی قرار داده و هر زمان مایل بودید آن‌ها را به سبد خرید اضافه کرده و خرید آن‌ها را تکمیل کنید.</string>
+    <string name="login_or_regester">ورود یا ثبت نام</string>
+    <string name="login_or_regester_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
 
 
 </resources>
