--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -25,4 +25,21 @@
     <string name="gift_card">Gift Card</string>
     <string name="digi_plus">Digi Plus </string>
     <string name="more">More</string>
+
+
+
+
+    <!--basket desc-->
+    <string name="cart">سبد خرید</string>
+    <string name="next_cart_list">لیست خرید بعدی</string>
+    <string name="purchase_process">ادامه فرآیند خرید</string>
+    <string name="total_shopping_cart">جمع سبد خرید</string>
+    <string name="cart_is_empty">سبد خرید شما خالی است!</string>
+    <string name="next_cart_list_is_empty">لیست خرید بعدی شما خالی است!</string>
+    <string name="next_cart_list_is_empty_msg">شما می‌توانید محصولاتی که به سبد خرید خود افزوده‌اید و فعلا قصد خرید آن‌ها را ندارید، در لیست خرید بعدی قرار داده و هر زمان مایل بودید آن‌ها را به سبد خرید اضافه کرده و خرید آن‌ها را تکمیل کنید.</string>
+    <string name="login_or_regester">ورود یا ثبت نام</string>
+    <string name="login_or_regester_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
+
+
+
 </resources>
