--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,14 @@
     <string name="password_error">اطلاعات وارد شده صحیح نیست</string>
     <string name="favoriteProduct">محبوب ترین محصولات</string>
 
-<!--basket desc-->
+    <string name="digikala_score">امتیاز دیجی‌کالا</string>
+    <string name="digikala_wallet_active">فعال‌سازی کیف پول</string>
+    <string name="score"> امتیاز</string>
+    <string name="auth">احراز هویت</string>
+    <string name="club">دیجی کلاب</string>
+    <string name="contact_us">تماس با ما</string>
+
+    <!--basket desc-->
     <string name="cart">سبد خرید</string>
     <string name="next_cart_list">لیست خرید بعدی</string>
     <string name="purchase_process">ادامه فرآیند خرید</string>
@@ -62,8 +69,8 @@
     <string name="cart_is_empty">سبد خرید شما خالی است!</string>
     <string name="next_cart_list_is_empty">لیست خرید بعدی شما خالی است!</string>
     <string name="next_cart_list_is_empty_msg">شما می‌توانید محصولاتی که به سبد خرید خود افزوده‌اید و فعلا قصد خرید آن‌ها را ندارید، در لیست خرید بعدی قرار داده و هر زمان مایل بودید آن‌ها را به سبد خرید اضافه کرده و خرید آن‌ها را تکمیل کنید.</string>
-    <string name="login_or_regester">ورود یا ثبت نام</string>
-    <string name="login_or_regester_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
+    <string name="login_or_register">ورود یا ثبت نام</string>
+    <string name="login_or_register_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
 
 
 </resources>
