add new feature

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -8,7 +8,7 @@
     <string name="my_digikala">my Digikala</string>
     <string name="search_in">search in</string>
     <string name="most_discounted_products">most discounted products</string>
-
+    <string name="suggestion_for_youSection">suggestion for youSection</string>
     <string name="category_title">Shop by category</string>
 
     <!-- these strings for test -->
