--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="best_selling_products">پرفروش‌ترین کالاها</string>
     <string name="most_visited_products">پربازدیدترین محصولات</string>
     <string name="most_discounted_products">منتخب محصولات حراج و تخفیف</string>
+    <string name="suggestion_for_youSection">پیشنهاد برای شما</string>
 
     <string name="profile_screen">صفحه پروفایل</string>
     <string name="change_language">تغییر زبان</string>
