--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="benefit">7,990   </string>
 
     <!--basket desc-->
+    <string name="count_product_cart">%1$s کالا</string>
     <string name="cart">سبد خرید</string>
     <string name="next_cart_list">لیست خرید بعدی</string>
     <string name="purchase_process">ادامه فرآیند خرید</string>
@@ -83,6 +84,10 @@
     <string name="next_cart_list_is_empty_msg">شما می‌توانید محصولاتی که به سبد خرید خود افزوده‌اید و فعلا قصد خرید آن‌ها را ندارید، در لیست خرید بعدی قرار داده و هر زمان مایل بودید آن‌ها را به سبد خرید اضافه کرده و خرید آن‌ها را تکمیل کنید.</string>
     <string name="login_or_register">ورود یا ثبت نام</string>
     <string name="login_or_register_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
+    <string name="basket_summary">خلاصه سبد</string>
+    <string name="products_price">قیمت کالاها</string>
+    <string name="products_discount">تخفیف کالاها</string>
+    <string name="shipping_cost_alert">هزینه ارسال بر اساس آدرس، زمان تحویل، وزن و حجم مرسوله شما محاسبه می‌شود</string>
 
 
 </resources>
