--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -63,7 +63,7 @@
     <string name="club">Digi Club</string>
     <string name="contact_us">Contact us</string>
 
-    <string name="superMarketArticle">Supermarket Articles</string>
+    <string name="superMarketArticles">Supermarket Articles</string>
     <string name="oneArticle">1 item</string>
     <string name="articleName">Hamburger bun, Avaran bun, one pack</string>
     <string name="articleWarranty">Warranty of authenticity and physical health of goods</string>
