--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="club">دیجی ‌کلاب</string>
     <string name="contact_us">تماس با ما</string>
 
-    <string name="superMarketArticle">کالاهای سوپر مارکتی</string>
+    <string name="superMarketArticles">کالاهای سوپر مارکتی</string>
     <string name="oneArticle">1 کالا</string>
     <string name="articleName">نان همبرگر نان آوران بسته یک عددی</string>
     <string name="articleWarranty">گارانتی اصالت و سلامت فیزیکی کالا</string>
