--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="storeName">دیجی کالا</string>
     <string name="availableInDigiKala">موجود در انبار دیجی کالا</string>
     <string name="digiKalaSuperMarketSpeedSend">ارسال سریع سوپر مارکتی دیجی کالا</string>
+    <string name="digiKalaSend">ارسال دیجی کالا</string>
     <string name="saveToNextList">ذخیره در لیست خرید بعدی</string>
     <string name="count">1</string>
     <string name="increase">+</string>
@@ -79,7 +80,7 @@
     <string name="cart">سبد خرید</string>
     <string name="next_cart_list">لیست خرید بعدی</string>
     <string name="purchase_process">ادامه فرآیند خرید</string>
-    <string name="purchase_process_time">زمان ارسال تعیین کنید</string>
+    <string name="purchase_process_time">پرداخت</string>
     <string name="total_shopping_cart">جمع سبد خرید</string>
     <string name="amount_payable">مبلغ قابل پرداخت</string>
     <string name="cart_is_empty">سبد خرید شما خالی است!</string>
