--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -81,4 +81,15 @@
     <!--Product Detail-->
     <string name="similar_product">Similar Products</string>
     <string name="recommended_similar_product">Buyers of this product have also bought this product</string>
+
+    <string name="user_comments">User Comments</string>
+    <string name="comment">Comment</string>
+    <string name="write_your_comment">Write your comment about this commodity</string>
+    <string name="comment_desc">5 points of Digi Club \n
+After confirming the comment, go to the club missions page and get your points</string>
+
+    <string name="Satisfaction">I recommend buying this product</string>
+    <string name="dissatisfaction">I do not recommend buying this product</string>
+    <string name="neutral">Not sure about this product</string>
+
 </resources>
