--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="best_selling_products">پرفروش‌ترین کالاها</string>
     <string name="most_visited_products">پربازدیدترین محصولات</string>
     <string name="most_discounted_products">منتخب محصولات حراج و تخفیف</string>
+    <string name="suggestion_for_youSection">پیشنهاد برای شما</string>
 
     <string name="profile_screen">صفحه پروفایل</string>
     <string name="change_language">تغییر زبان</string>
@@ -38,9 +39,9 @@
     <string name="digi_pay">دیجی پی</string>
     <string name="pindo">پیندو</string>
     <string name="gift_card">کارت هدیه</string>
-    <string name="digi_plus">دیجی پلاس</string>
+    <string name="digi_plus">دیجی‌پلاس</string>
     <string name="more">بیشتر</string>
-
+    <string name="suggestion_for_you">پیشنهاد برای شما</string>
     <string name="loginTxt">برای ورود یا ثبت نام در دیجی کالا شماره موبایل یا پست الکترونیک خود را وارد نمایید</string>
     <string name="set_password_text">لطفا یک رمز عبور برای خود تعیین کنید و یا اگر قبلا ثبت‌نام کرده‌اید، رمز عبور خود را وارد کنید.</string>
     <string name="terms_and_rules_full">با ورود و یا ثبت نام در دیجی کالا شما شرایط و قوانین استفاده از سرویس های سایت دیجی کالا و قوانین حریم خصوصی آن را می پذیرید.</string>
@@ -54,19 +55,58 @@
     <string name="password_error">اطلاعات وارد شده صحیح نیست</string>
     <string name="favoriteProduct">محبوب ترین محصولات</string>
 
+    <string name="digikala_score">امتیاز دیجی‌کالا</string>
+    <string name="digikala_wallet_active">فعال‌سازی کیف پول</string>
+    <string name="score"> امتیاز</string>
+    <string name="auth">احراز هویت</string>
+    <string name="club">دیجی ‌کلاب</string>
+    <string name="contact_us">تماس با ما</string>
 
-    <string name="superMarketArticle">کالاهای سوپر مارکتی</string>
+    <string name="superMarketArticles">کالاهای سوپر مارکتی</string>
     <string name="oneArticle">1 کالا</string>
     <string name="articleName">نان همبرگر نان آوران بسته یک عددی</string>
     <string name="articleWarranty">گارانتی اصالت و سلامت فیزیکی کالا</string>
     <string name="storeName">دیجی کالا</string>
     <string name="availableInDigiKala">موجود در انبار دیجی کالا</string>
     <string name="digiKalaSuperMarketSpeedSend">ارسال سریع سوپر مارکتی دیجی کالا</string>
+    <string name="digiKalaSend">ارسال دیجی کالا</string>
     <string name="saveToNextList">ذخیره در لیست خرید بعدی</string>
     <string name="count">1</string>
     <string name="increase">+</string>
     <string name="benefit">7,990   </string>
 
+    <!--basket desc-->
+    <string name="count_product_cart">%1$s کالا</string>
+    <string name="cart">سبد خرید</string>
+    <string name="next_cart_list">لیست خرید بعدی</string>
+    <string name="purchase_process">ادامه فرآیند خرید</string>
+    <string name="purchase_process_time">پرداخت</string>
+    <string name="total_shopping_cart">جمع سبد خرید</string>
+    <string name="amount_payable">مبلغ قابل پرداخت</string>
+    <string name="cart_is_empty">سبد خرید شما خالی است!</string>
+    <string name="next_cart_list_is_empty">لیست خرید بعدی شما خالی است!</string>
+    <string name="next_cart_list_is_empty_msg">شما می‌توانید محصولاتی که به سبد خرید خود افزوده‌اید و فعلا قصد خرید آن‌ها را ندارید، در لیست خرید بعدی قرار داده و هر زمان مایل بودید آن‌ها را به سبد خرید اضافه کرده و خرید آن‌ها را تکمیل کنید.</string>
+    <string name="login_or_register">ورود یا ثبت نام</string>
+    <string name="login_or_register_msg">برای تجربه بهتر خرید و بررسی روش ارسال کالاها لطفا وارد شوید.</string>
+    <string name="basket_summary">خلاصه سبد</string>
+    <string name="products_price">قیمت کالاها</string>
+    <string name="products_discount">تخفیف کالاها</string>
+    <string name="shipping_cost_alert">هزینه ارسال بر اساس آدرس، زمان تحویل، وزن و حجم مرسوله شما محاسبه می‌شود</string>
+    <string name="dot_bullet">•</string>
+
+    <string name="my_orders">سفارش‌های من</string>
+    <string name="processing">در حال پردازش</string>
+    <string name="returned">مرجوع شده</string>
+    <string name="canceled">لغو شده</string>
+    <string name="delivered">تحویل شده</string>
+    <string name="unpaid">در انتظار پرداخت</string>
+
+
+    <string name="fav_list">لیست مورد علاقه</string>
+    <string name="my_comments">نقد و نظرات</string>
+    <string name="addresses">آدرس‌ها</string>
+    <string name="profile_data">اطلاعات حساب کاربری</string>
+    <string name="deleteFromList">حذف از لیست</string>
 
 
     <!--Product Detail-->
@@ -83,4 +123,15 @@
     <string name="dissatisfaction">خرید این محصول را توصیه نمیکنم</string>
     <string name="neutral">در مورد این محصول مطمئن نیستم</string>
 
+    <string name="deliveryAndTimeMethod">شیوه و زمان ارسال</string>
+    <string name="consignment">مرسوله 1 از 1</string>
+    <string name="normalDelivery">ارسال عادی</string>
+    <string name="commodity2">4 کالا</string>
+    <string name="readyToSend">آماده ارسال</string>
+    <string name="costSend">هزینه ارسال</string>
+    <string name="choseTimeSend">انتخاب زمان ارسال</string>
+
+    <string name="save_product_to_cart">ذخیره %1$d  کالا در لیست خرید بعدی</string>
+    <string name="delete_product_from_cart">حذف %1$d  کالا از سبد خرید</string>
+    <string name="superMarketArticle">کالاهای سوپر مارکتی</string>
 </resources>
