--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,18 @@
     <string name="exclusive_to_digi_plus">اختصاصی دیجی پلاس</string>
     <string name="leading_post_all_over_the_country">پست پیشتاز سراسر کشور</string>
 
+    <!-- Favorite List -->
+    <string name="my_fav_list">لیست علاقه مندی ها</string>
+    <string name="remove_from_list">حذف از لیست</string>
+    <string name="watch_and_buy_product">مشاهده و خرید کالا</string>
+    <string name="fav_products">کالاهای مورد علاقه</string>
+    <string name="product">کالا</string>
+    <string name="sure_to_remove_fav_item">آیا از حذف کالا از لیست علاقه مندی ها اطمینان دارید؟</string>
+    <string name="remove_fav_item">حذف کالا</string>
+    <string name="cancel">انصراف</string>
+
+
+
 
 
 
