feat: fix some issues

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -225,6 +225,8 @@ After confirming the comment, go to the club missions page and get your points</
     <string name="normal">Normal</string>
     <string name="perfect">Perfect !</string>
 
+    <string name="view" >View</string>
+
 
 
 
