--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,8 +230,7 @@
     <string name="normal"> معمولی</string>
     <string name="perfect"> عالی شد !</string>
 
-
-
+    <string name="view" >بازدید</string>
 
 
 
